# vocabtrainer

./: LICENSE  README.md  VokabelTrainer.pyproj  VokabelTrainer.sln  pyproject.toml
src/: main.py
src/vocabtrainer/: english.txt  english_test.txt  gui.py  latein.txt
