[tool.pytest.ini_options]
pythonpath = "src"
[build-system]
# Minimum requirements for the build system to execute.
requires = []  # PEP 508 specifications.
[project]
name = "VocabelTrainer"
version = "0.3.1"
description = "Simple Weekend project to train vocabularies"
readme = {file = "README.txt", content-type = "text/markdown"}
requires-python = ">=3.10"
authors = [
  {name = "Paul Teichmann"},
]
keywords = ["vocabulary", "english", "latin"]
